updating for changes

--- a/ss_data.ipynb
+++ b/ss_data.ipynb
@@ -436,6 +436,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-10-60dfb316431b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-60dfb316431b>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    c=d6tstack.convert_xls.XLStoCSVMultiSheet('data/byState.xlsx', output_dir='data/output', logger-PrintLogger())\u001b[0m\n\u001b[1;37m                                                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=d6tstack.convert_xls.XLStoCSVMultiSheet('data/byState.xlsx', output_dir='data/output', logger-PrintLogger())\n",
+    "c.convert_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
