no conflicts with this update, just fixing minor stuff that has nothing to do with any ofour files

--- a/wikipedia_data_api.ipynb
+++ b/wikipedia_data_api.ipynb
@@ -2,90 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'searchinfo': {'totalhits': 19236},\n",
-       " 'search': [{'ns': 0,\n",
-       "   'title': '50 Cent',\n",
-       "   'pageid': 192481,\n",
-       "   'size': 136516,\n",
-       "   'wordcount': 13437,\n",
-       "   'snippet': 'Curtis James Jackson III (born July 6, 1975), known professionally as <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span>, is an American rapper, singer, songwriter, actor, television producer,',\n",
-       "   'timestamp': '2019-08-29T09:58:16Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 Cent Party',\n",
-       "   'pageid': 21033072,\n",
-       "   'size': 34595,\n",
-       "   'wordcount': 3618,\n",
-       "   'snippet': 'The <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span> Party, or <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span> Army (Chinese: 五毛党), is the colloquial term for Internet commentators (Chinese: 网络评论员) which are hired by Chinese authorities',\n",
-       "   'timestamp': '2019-07-13T13:07:55Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': 'Curtis (50 Cent album)',\n",
-       "   'pageid': 10477329,\n",
-       "   'size': 46102,\n",
-       "   'wordcount': 2280,\n",
-       "   'snippet': 'Curtis is the third studio album by <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span>. It was released September 11, 2007, by Shady Records, Aftermath Entertainment, Interscope Records and Universal',\n",
-       "   'timestamp': '2019-09-01T12:20:40Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 cents',\n",
-       "   'pageid': 1597414,\n",
-       "   'size': 378,\n",
-       "   'wordcount': 44,\n",
-       "   'snippet': '<span class=\"searchmatch\">50</span> <span class=\"searchmatch\">cents</span> is a coinage value in many systems using decimal currencies. Examples include: Australian fifty-<span class=\"searchmatch\">cent</span> coin <span class=\"searchmatch\">50</span>-<span class=\"searchmatch\">cent</span> piece (Canadian coin) <span class=\"searchmatch\">50</span> cent',\n",
-       "   'timestamp': '2014-10-21T20:02:15Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 Cent: Bulletproof',\n",
-       "   'pageid': 1891774,\n",
-       "   'size': 18494,\n",
-       "   'wordcount': 1547,\n",
-       "   'snippet': '<span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span>: Bulletproof is an action video game developed by Genuine Games and published by Vivendi Universal Games for the PlayStation 2 and Xbox, which',\n",
-       "   'timestamp': '2019-08-05T17:19:22Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 Cent albums discography',\n",
-       "   'pageid': 3975519,\n",
-       "   'size': 42862,\n",
-       "   'wordcount': 2162,\n",
-       "   'snippet': 'American rapper <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span> has released five studio albums, ten mixtapes, two video albums, four compilation albums, one soundtrack album, 76 singles (including',\n",
-       "   'timestamp': '2019-08-30T23:33:30Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 Cent: Blood on the Sand',\n",
-       "   'pageid': 16599307,\n",
-       "   'size': 18535,\n",
-       "   'wordcount': 1515,\n",
-       "   'snippet': '<span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span>: Blood on the Sand is a third-person shooter video game developed by Swordfish Studios and published by THQ for the PlayStation 3 and Xbox 360',\n",
-       "   'timestamp': '2019-07-16T03:45:14Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 Cent singles discography',\n",
-       "   'pageid': 56149039,\n",
-       "   'size': 90780,\n",
-       "   'wordcount': 4332,\n",
-       "   'snippet': 'discography for American hip hop musician <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span>. G-Unit discography &quot;You Don\\'t Know&quot; did not enter the Flanders Ultratop <span class=\"searchmatch\">50</span>, but peaked at number seven on the',\n",
-       "   'timestamp': '2019-08-30T22:24:02Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 euro cent coin',\n",
-       "   'pageid': 6139099,\n",
-       "   'size': 16924,\n",
-       "   'wordcount': 881,\n",
-       "   'snippet': 'The <span class=\"searchmatch\">50</span> euro <span class=\"searchmatch\">cent</span> coin (€0.<span class=\"searchmatch\">50</span>) has a value of half a euro and are composed of an alloy called nordic gold. All coins have a common reverse side and country-specific',\n",
-       "   'timestamp': '2019-05-07T11:00:29Z'},\n",
-       "  {'ns': 0,\n",
-       "   'title': '50 Cent videography',\n",
-       "   'pageid': 42385506,\n",
-       "   'size': 33417,\n",
-       "   'wordcount': 1255,\n",
-       "   'snippet': 'American rapper <span class=\"searchmatch\">50</span> <span class=\"searchmatch\">Cent</span> has been featured in 88 music videos, 31 television programs, 25 films, and 4 video games. http://www.nydailynews',\n",
-       "   'timestamp': '2019-07-21T05:33:43Z'}]}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests as req\n",
     "import pandas as pd\n",
@@ -93,13 +12,8 @@
     "#for now just one variable. further, i'll write a loop that will go #through the \n",
     "#names file (in data folder) that contains 10k formatted names. You can go check it out.\n",
     "file =(\"data/names.csv\")\n",
-    "\n",
-    "fname=pd.read_csv(file)\n",
-    "#header=next(fname)\n",
-    "lname = \"50%20Cent\"\n",
-    "\n",
+    "fname=pd.read_csv(file,index_col=['Name'])\n",
     "fname.head()\n",
-    "#lname = \"albert%20einstein\"\n",
     "\n",
     "#URL that i fished out that basically returns json on the fname data\n",
     "#I THINK WE CAN FIND A BETTER API LINK\n",
@@ -108,17 +22,16 @@
     "#einst = req.get(url).json()\n",
     "#print (url)\n",
     "\n",
-    "#this is what dictionaries look like\n",
-    "#einst\n",
-    "wiki_list=[]\n",
-    "url = \"https://en.wikipedia.org/w/api.php?action=query&list=search&srsearch=50%20Cent&format=json\"\n",
+    "lname = \"50%20Cent\"\n",
+    "url = \"https://en.wikipedia.org/w/api.php?action=query&list=search&srsearch=\" + lname + \"&format=json\"\n",
     "articles = req.get(url).json()\n",
-    "articles['query']\n"
+    "#uncomment the belwo to see what json looks like\n",
+    "#articles\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +109,7 @@
        "  'timestamp': '2019-08-18T05:35:41Z'}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,9 +117,7 @@
    "source": [
     "#need to be able to penetrate json layers to extract needed data, which is \"title\" and \"extract\"\n",
     "#Technically title we posses in the DB above\n",
-    "wiki_list=[]\n",
-    "url = \"https://en.wikipedia.org/w/api.php?action=query&list=search&srsearch=\"+lname+\"&format=json\"\n",
-    "articles = req.get(url).json()\n",
+    "\n",
     "articles['query']['search']\n",
     "    \n",
     "    #time.sleep(.5)\n",
