--- a/12_16_RedBlueTotalNamesDF.ipynb
+++ b/12_16_RedBlueTotalNamesDF.ipynb
@@ -389,92 +389,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>year</th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Emma</td>\n",
-       "      <td>57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Sophia</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Abigail</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Ava</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  state gender  year     name  count\n",
-       "0    AK      F  2012     Emma     57\n",
-       "1    AK      F  2012   Sophia     56\n",
-       "2    AK      F  2012   Olivia     49\n",
-       "3    AK      F  2012  Abigail     38\n",
-       "4    AK      F  2012      Ava     32"
+       "state     39523\n",
+       "gender    39523\n",
+       "year      39523\n",
+       "name      39523\n",
+       "count     39523\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,97 +416,26 @@
     "#red2012 #verify output\n",
     "#create a names df for 2012 red states\n",
     "red2012names=Election2012[Election2012['state'].isin(red2012)]\n",
-    "red2012names.head() #verify output"
+    "red2012names.count() .head() #verify output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>year</th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5616</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Sophia</td>\n",
-       "      <td>3644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5617</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Isabella</td>\n",
-       "      <td>3109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5618</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Emma</td>\n",
-       "      <td>2452</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5619</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Emily</td>\n",
-       "      <td>2438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5620</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Mia</td>\n",
-       "      <td>2329</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     state gender  year      name  count\n",
-       "5616    CA      F  2012    Sophia   3644\n",
-       "5617    CA      F  2012  Isabella   3109\n",
-       "5618    CA      F  2012      Emma   2452\n",
-       "5619    CA      F  2012     Emily   2438\n",
-       "5620    CA      F  2012       Mia   2329"
+       "state     53671\n",
+       "gender    53671\n",
+       "year      53671\n",
+       "name      53671\n",
+       "count     53671\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,97 +448,26 @@
     "\n",
     "#create a names df for 2012 blue states\n",
     "blue2012names=Election2012[Election2012['state'].isin(blue2012)]\n",
-    "blue2012names.head()\n"
+    "blue2012names.count() #.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>year</th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Emma</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Amelia</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Charlotte</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Sophia</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  state gender  year       name  count\n",
-       "0    AK      F  2016       Emma     47\n",
-       "1    AK      F  2016     Olivia     46\n",
-       "2    AK      F  2016     Amelia     35\n",
-       "3    AK      F  2016  Charlotte     34\n",
-       "4    AK      F  2016     Sophia     33"
+       "state     56115\n",
+       "gender    56115\n",
+       "year      56115\n",
+       "name      56115\n",
+       "count     56115\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,97 +481,26 @@
     "\n",
     "#create a names df for 2016 red states\n",
     "red2016names=Election2016[Election2016['state'].isin(red2016)]\n",
-    "red2016names.head()"
+    "red2016names.count() #.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>year</th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5745</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Mia</td>\n",
-       "      <td>2796</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5746</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Sophia</td>\n",
-       "      <td>2754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5747</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Emma</td>\n",
-       "      <td>2606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5748</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Olivia</td>\n",
-       "      <td>2548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5749</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Isabella</td>\n",
-       "      <td>2359</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     state gender  year      name  count\n",
-       "5745    CA      F  2016       Mia   2796\n",
-       "5746    CA      F  2016    Sophia   2754\n",
-       "5747    CA      F  2016      Emma   2606\n",
-       "5748    CA      F  2016    Olivia   2548\n",
-       "5749    CA      F  2016  Isabella   2359"
+       "state     39146\n",
+       "gender    39146\n",
+       "year      39146\n",
+       "name      39146\n",
+       "count     39146\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +512,7 @@
     "\n",
     "#create a names df for 2016 red states\n",
     "blue2016names=Election2016[Election2016['state'].isin(blue2016)]\n",
-    "blue2016names.head()"
+    "blue2016names.count() #.head()"
    ]
   },
   {
