--- a/ElectionYrSummary_USmap.ipynb
+++ b/ElectionYrSummary_USmap.ipynb
@@ -110,16 +110,16 @@
     }
    ],
    "source": [
-    "#bring in baby name data from SSN text files for 51 States (DC is a sep file)\n",
-    "#create a dataframe\n",
+    "#bring in baby name data from text files for 51 States downloaded from SSN website (DC is a sep file)\n",
+    "#create a dataframe to store data\n",
     "name_df = pd.DataFrame()\n",
     "\n",
-    "#open, read all text files downloaded from SSN website and name the column labels\n",
+    "#open, read all text files and name the column labels\n",
     "for files in glob.glob('../columbia_group_project/SSN_data/Files by name/*.txt'):\n",
     "    comb_data = pd.read_csv(files,names=['state', 'gender', 'year', 'name', 'count'])\n",
     "#concatenate text files in the dataframe\n",
     "    name_df = pd.concat([name_df,comb_data],axis=0,ignore_index=True)\n",
-    "name_df.head()"
+    "name_df.head() #verify the output into a df"
    ]
   },
   {
@@ -382,7 +382,7 @@
     }
    ],
    "source": [
-    "#bring in data for State classification (R/D) by election year - source wikipedia\n",
+    "#bring in data for State classification (R/D) by election year - partial source wikipedia\n",
     "#write data into a dataframe \n",
     "States_df = pd.DataFrame()\n",
     "States_df = pd.read_csv('blueRedStates.csv',encoding='ISO-8859-1')\n",
