updating for final png

--- a/Part_II_ElectionYrSummary_USmap.ipynb
+++ b/Part_II_ElectionYrSummary_USmap.ipynb
@@ -162,7 +162,7 @@
        "      <th>2008</th>\n",
        "      <th>2012</th>\n",
        "      <th>2016</th>\n",
-       "      <th>R/D No change b/w 2012/16</th>\n",
+       "      <th>R/D No change</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -363,17 +363,17 @@
        "8   District of Columbia    DC    D    D    D    D    D    D    D    D    D   \n",
        "9                Florida    FL    R    D    R    R    R    R    D    R    R   \n",
        "\n",
-       "  2008 2012 2016  R/D No change b/w 2012/16  \n",
-       "0    R    R    R                       True  \n",
-       "1    R    R    R                       True  \n",
-       "2    R    R    R                       True  \n",
-       "3    R    R    R                       True  \n",
-       "4    D    D    D                       True  \n",
-       "5    D    D    D                       True  \n",
-       "6    D    D    D                       True  \n",
-       "7    D    D    D                       True  \n",
-       "8    D    D    D                       True  \n",
-       "9    D    D    R                      False  "
+       "  2008 2012 2016  R/D No change  \n",
+       "0    R    R    R           True  \n",
+       "1    R    R    R           True  \n",
+       "2    R    R    R           True  \n",
+       "3    R    R    R           True  \n",
+       "4    D    D    D           True  \n",
+       "5    D    D    D           True  \n",
+       "6    D    D    D           True  \n",
+       "7    D    D    D           True  \n",
+       "8    D    D    D           True  \n",
+       "9    D    D    R          False  "
       ]
      },
      "execution_count": 3,
