clean up update

--- a/ss_drafts/names_70sOn.ipynb
+++ b/ss_drafts/names_70sOn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4    AK      F  1910     Helen      7"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
     "name_df = pd.DataFrame()\n",
     "\n",
     "#open, read all text files and name the column labels\n",
-    "for files in glob.glob('data/*.txt'):\n",
+    "for files in glob.glob('../SSN_data/*.txt'):\n",
     "    comb_data = pd.read_csv(files,names=['state', 'gender', 'year', 'name', 'count'])\n",
     "#concatenate text files in the dataframe\n",
     "    name_df = pd.concat([name_df,comb_data],axis=0,ignore_index=True)\n",
@@ -109,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write output to csv\n",
-    "name_df.to_csv('output_data/nameDataAll.csv', index_label=\"index\")"
+    "#name_df.to_csv('../output/nameDataAll.csv', index_label=\"index\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "Dawn       4579    AK      F  1970     37"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write output to csv\n",
-    "name_df.to_csv('output_data/nameData70on.csv', index_label=\"index\")"
+    "#name_df.to_csv('../output/nameData70on.csv', index_label=\"index\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -385,7 +385,7 @@
        "       Joseph       1105913"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,17 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write output to csv\n",
-    "name_df_10_largest.to_csv('output_data/byGender10popular70on.csv',header=False)"
+    "#name_df_10_largest.to_csv('../output/byGender10popular70on.csv',header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "Name: count, Length: 1020, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
